add animation to 4 pieces

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="app.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div>
+    <div class="poster">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 595.276 841.89">
             <defs>
                 <style>
@@ -897,6 +898,7 @@
             </g>
         </svg>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
